角色 权限 增删改查

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 port: 8443
-#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
